--- a/package.json
+++ b/package.json
@@ -8,13 +8,13 @@
   "author": "Lachlan Campbell",
   "license": "MIT",
   "devDependencies": {
-    "babel-preset-env": "^1.6.0",
+    "babel-preset-env": "^1.6.1",
     "babel-preset-react": "^6.24.1",
     "babel-register": "^6.26.0",
-    "cxs": "^5.1.0",
-    "react": "^15.6.1",
-    "react-dom": "^15.6.1",
-    "styled-system": "^1.0.0-15"
+    "cxs": "5.1.0",
+    "react": "^16.0.0",
+    "react-dom": "^16.0.0",
+    "styled-system": "^1.0.8"
   },
   "repository": {
     "type": "git",
